Fix bug were text goes out of bounds

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ body{
 div > p {
     font-size: 1.4rem;
     margin: 1.4rem 1px;
-    width: 45vw;
+    width: min(45vw, 40rem);
 }
 
 form {
